:tada: feat: add noti
