# docs/swagger.json
@@ -89,6 +89,27 @@
                 "responses": {}
             }
         },
+        "/api/auth/verify": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Verify token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "operationId": "VerifyTokenHandler",
+                "responses": {}
+            }
+        },
         "/api/cat": {
             "get": {
                 "security": [
@@ -649,13 +670,6 @@
                 "operationId": "UserUpdateHandler",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "user id",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "user data",
                         "name": "body",
                         "in": "body",
@@ -697,6 +711,27 @@
                         }
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/api/user/noti": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get treatment notification",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "operationId": "UserGetTreatmentNotiHandler",
                 "responses": {}
             }
         },
@@ -770,6 +805,12 @@
         "domain.Treatment": {
             "type": "object",
             "properties": {
+                "appointment": {
+                    "type": "string"
+                },
+                "appointmentDate": {
+                    "type": "string"
+                },
                 "catID": {
                     "type": "integer"
                 },
@@ -871,6 +912,15 @@
                 "treatmentTypeID"
             ],
             "properties": {
+                "appointment": {
+                    "type": "string",
+                    "example": "Detail"
+                },
+                "appointmentDate": {
+                    "type": "string",
+                    "format": "datetime",
+                    "example": "2021-01-25T07:30"
+                },
                 "date": {
                     "type": "string",
                     "format": "date",
@@ -1038,6 +1088,15 @@
         "payload.UpdateTreatment": {
             "type": "object",
             "properties": {
+                "appointment": {
+                    "type": "string",
+                    "example": "Detail"
+                },
+                "appointmentDate": {
+                    "type": "string",
+                    "format": "datetime",
+                    "example": "2021-01-25T07:30"
+                },
                 "date": {
                     "type": "string",
                     "format": "date",
